Fixed Digits alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -120,26 +120,21 @@
   font-weight: bold;
 } 
 
-.two-columns__paragraph:last-of-type {
-  margin-bottom: 0px;
-
 .digits {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-  align-content: space-between;
-  width: 1100px;
-  margin: auto;
+  align-items: center;
+  margin-top: 100px;
 }
 
 .section-title {
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
-  margin-top: 100px;
   width: 60%;
-  margin: 0;
+  margin: auto;
   padding-bottom: 20px;
   text-align: center;
 }
@@ -150,37 +145,36 @@
   font-weight: normal;
   text-align: center;
   width: 60%;
-  margin: 0;
-  padding: 0 20%;
+  margin: auto;
 }
 
 .table {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1100px;
+  margin: auto;
+  margin-bottom: 100px;
 }
 
 .table__cell {
   width: 250px;
   margin-top: 60px;
-  text-align: center;
 }
 
 .table__heading {
-  margin-bottom: 20px;
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
-  text-align:justify;
+  margin: 0;
 }
 
 .table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  text-align:justify;
-  width: 200px;
-  margin-right: 0;
+  margin: 20px 0 0;
 }
 
 .feynman {
